# chips-rost

./: .gitignore  CITATION.cff  DATA_LICENSES.md  LICENSE  MANIFEST.md  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
data/ro-stories-original/: Bacalbasa_1893.txt  Bacalbasa_1Mai.txt  Bacalbasa_300000Lei.txt  Bacalbasa_AcelCeTace.txt  Bacalbasa_Ajutor.txt  Bacalbasa_AlexandruIii.txt  Bacalbasa_AmintiriLiterareGenialulPatrascu.txt  Bacalbasa_AnulNou.txt  Bacalbasa_Armonie.txt  Bacalbasa_Art262CodPenal.txt  Bacalbasa_ArtaIncurajata.txt  Bacalbasa_ArtaNoastra.txt  Bacalbasa_ArtaPentruArta.txt  Bacalbasa_AutoriiRascoalelor.txt  Bacalbasa_BaiatulRomaniei.txt  Bacalbasa_BaietiiLuiBratianu.txt  Bacalbasa_BataiaInArmata.txt  Bacalbasa_BeneMerenti.txt  Bacalbasa_CDobrogeanuGherea.txt  Bacalbasa_Calm.txt  Bacalbasa_CartileDidactice.txt  Bacalbasa_CasaDeNebuni.txt  Bacalbasa_CeEsteConstitutia.txt  Bacalbasa_CeFaceCaragiale.txt  Bacalbasa_ColegiulTaranesc.txt  (+1209 more)
scripts/: audit_combined_corpus.py  audit_ro_stories.py  check_release_inventory.py  chips.py  chips_r_detail.py  chips_rerank.py  export_normalized_corpus.py  generate_paper_tables.py  rost_interpretability.py  rost_ngram_audit.py  rost_per_author.py  rost_uncertainty.py  rostories_shortcut_sensitivity.py  run_smoke_test.sh
tests/: test_char_ngram_baseline.py  test_chips_r_detail.py  test_chips_rerank.py  test_data_loading.py  test_rost_interpretability.py  test_rost_ngram_audit.py  test_rost_per_author.py  test_rost_uncertainty.py
(+146 files in other folders)
