[project]
name = "chips-rost"
version = "0.1.0"
description = "CHiPS character-level authorship attribution experiments for Romanian texts"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
